syntax = "proto3";

package proto;
option go_package = "./;pb";

import "empty.proto";
import "date.proto";

message Customer {
    string id = 1;
    string name = 2;
    Date dateOfBirth = 3;
    string address = 4;
    string email = 5;
    string password = 6;
}

message CreateCustomerRequest {
    string name = 1;
    Date dateOfBirth = 2;
    string address = 3;
    string email = 4;
    string password = 5;
}

message UpdateCustomerRequest {
    string id = 1;
    string name = 2;
    Date dateOfBirth = 3;
    string address = 4;
    string email = 5;
}

message ChangeCustomerPasswordRequest {
    string id = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

message GetCustomerDetailsRequest {
    string id = 1;
}

service MyCustomer {
    rpc CreateCustomer(CreateCustomerRequest) returns (Customer);
    rpc UpdateCustomer(UpdateCustomerRequest) returns (Customer);
    rpc GetCustomerDetails(GetCustomerDetailsRequest) returns (Customer);
    rpc ChangeCustomerPassword(ChangeCustomerPasswordRequest) returns (Empty);
}
